feat: add light/dark mode theme support

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,10 @@
 
 <body>
     <div class="container">
-        <h2>Workday Skills Autofill</h2>
+        <div class="header">
+            <h2>Workday Skills Autofill</h2>
+            <button id="themeToggle" class="theme-toggle" title="Toggle Dark/Light Mode">🌙</button>
+        </div>
         <p class="subtitle">Enter skills and press Enter or Comma</p>
 
         <div class="input-group">
