feat: enhance job scanner with Add All button and better filters

--- a/popup.html
+++ b/popup.html
@@ -36,7 +36,11 @@
             <div id="suggestionsArea" class="suggestions-area" style="display:none;">
                 <div class="suggestions-header">
                     <span>Missing Skills Found:</span>
-                    <button id="closeSuggestions" class="icon-btn-small">×</button>
+                    <div style="display:flex; gap:5px;">
+                        <button id="addAllSuggestions" class="text-btn small" title="Add all missing skills">Add
+                            All</button>
+                        <button id="closeSuggestions" class="icon-btn-small">×</button>
+                    </div>
                 </div>
                 <div id="suggestionsContainer" class="tag-container suggestions"></div>
             </div>
